{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 112,
  "lineage": "5d256681-d572-a547-bfe5-8356682cbf72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a1dd14acf10118e",
            "arn": "arn:aws:ec2:us-east-1:051826703172:elastic-ip/eipalloc-03a1dd14acf10118e",
            "association_id": "eipassoc-00ee821dbf7c7f36b",
            "domain": "vpc",
            "id": "eipalloc-03a1dd14acf10118e",
            "instance": "i-094c40dd6e5872ceb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-051318d487c6d5cda",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-34-237-12-133.compute-1.amazonaws.com",
            "public_ip": "34.237.12.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "credentialmate-production-app-eip"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-app-eip",
              "Project": "CredentialMate"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_app",
            "aws_iam_role.ec2_app",
            "aws_instance.app",
            "aws_internet_gateway.main",
            "aws_launch_template.app",
            "aws_security_group.ec2_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4588dde8fcd614",
            "arn": "arn:aws:ec2:us-east-1:051826703172:instance/i-094c40dd6e5872ceb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "credentialmate-production-ec2-app-profile",
            "id": "i-094c40dd6e5872ceb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "credentialmate-prod-key-2025",
            "launch_template": [
              {
                "id": "lt-0e8870ca0485c1b1d",
                "name": "credentialmate-production-20251120010719301400000008",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051318d487c6d5cda",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-34-230-13-92.compute-1.amazonaws.com",
            "public_ip": "34.230.13.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "CostCenter": "Infrastructure",
                  "Environment": "production",
                  "HIPAA": "true",
                  "ManagedBy": "Terraform",
                  "Name": "credentialmate-production-app-volume",
                  "Project": "CredentialMate"
                },
                "tags_all": {
                  "CostCenter": "Infrastructure",
                  "Environment": "production",
                  "HIPAA": "true",
                  "ManagedBy": "Terraform",
                  "Name": "credentialmate-production-app-volume",
                  "Project": "CredentialMate"
                },
                "throughput": 125,
                "volume_id": "vol-0e73c70142933bd9c",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fbb6a2b6ba799e1",
            "tags": {
              "Backup": "Required",
              "Monitoring": "Enabled",
              "Name": "credentialmate-production-app-server"
            },
            "tags_all": {
              "Backup": "Required",
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Monitoring": "Enabled",
              "Name": "credentialmate-production-app-server",
              "Project": "CredentialMate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05856489359c5e1e2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_app",
            "aws_iam_role.ec2_app",
            "aws_launch_template.app",
            "aws_security_group.ec2_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.template_file.user_data"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:internet-gateway/igw-035b7e2cc0bd1f314",
            "id": "igw-035b7e2cc0bd1f314",
            "owner_id": "051826703172",
            "tags": {
              "Name": "credentialmate-production-igw"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-igw",
              "Project": "CredentialMate"
            },
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:route-table/rtb-0a8a5152ed66b132e",
            "id": "rtb-0a8a5152ed66b132e",
            "owner_id": "051826703172",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "credentialmate-production-private-rt"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-private-rt",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:route-table/rtb-0b5b1aaa944ef7f2b",
            "id": "rtb-0b5b1aaa944ef7f2b",
            "owner_id": "051826703172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035b7e2cc0bd1f314",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "credentialmate-production-public-rt"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-public-rt",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0898739d0ca3de128",
            "route_table_id": "rtb-0a8a5152ed66b132e",
            "subnet_id": "subnet-0cb2c348da91d59dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097feaecfac2626fa",
            "route_table_id": "rtb-0a8a5152ed66b132e",
            "subnet_id": "subnet-071034a9d6ecbba3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3d3bfc0d6b6afa",
            "route_table_id": "rtb-0b5b1aaa944ef7f2b",
            "subnet_id": "subnet-02fbb6a2b6ba799e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcdf8ba9c461be19",
            "route_table_id": "rtb-0b5b1aaa944ef7f2b",
            "subnet_id": "subnet-099fe69e264deb069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:security-group/sg-05856489359c5e1e2",
            "description": "Security group for EC2 application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05856489359c5e1e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.34.120.196/32"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "credentialmate-production-ec2-app-sg",
            "name_prefix": "",
            "owner_id": "051826703172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credentialmate-production-ec2-app-sg"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-ec2-app-sg",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:security-group/sg-0d83b4b0337c84200",
            "description": "Security group for RDS PostgreSQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "No outbound traffic allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d83b4b0337c84200",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2 app servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05856489359c5e1e2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "credentialmate-production-rds-sg",
            "name_prefix": "",
            "owner_id": "051826703172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credentialmate-production-rds-sg"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-rds-sg",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:security-group/sg-0575ad315cf6a7a3b",
            "description": "Security group for Redis/ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "No outbound traffic allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0575ad315cf6a7a3b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EC2 app servers",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05856489359c5e1e2"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "credentialmate-production-redis-sg",
            "name_prefix": "",
            "owner_id": "051826703172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credentialmate-production-redis-sg"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-redis-sg",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:security-group/sg-0764bea1e735643ed",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0764bea1e735643ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "credentialmate-production-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "051826703172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credentialmate-production-vpc-endpoints-sg"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-vpc-endpoints-sg",
              "Project": "CredentialMate"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:subnet/subnet-0cb2c348da91d59dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb2c348da91d59dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826703172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credentialmate-production-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-private-subnet-1",
              "Project": "CredentialMate",
              "Type": "Private"
            },
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:subnet/subnet-071034a9d6ecbba3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071034a9d6ecbba3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826703172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credentialmate-production-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-private-subnet-2",
              "Project": "CredentialMate",
              "Type": "Private"
            },
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:subnet/subnet-02fbb6a2b6ba799e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fbb6a2b6ba799e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826703172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credentialmate-production-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-public-subnet-1",
              "Project": "CredentialMate",
              "Type": "Public"
            },
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:subnet/subnet-099fe69e264deb069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099fe69e264deb069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826703172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credentialmate-production-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-public-subnet-2",
              "Project": "CredentialMate",
              "Type": "Public"
            },
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:vpc/vpc-009c7a92b2822fd82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0750d86ffc605ce48",
            "default_route_table_id": "rtb-0eaea38cf84830c0f",
            "default_security_group_id": "sg-04c56f69a9ca0271d",
            "dhcp_options_id": "dopt-0d84df16d4651e528",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009c7a92b2822fd82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaea38cf84830c0f",
            "owner_id": "051826703172",
            "tags": {
              "Name": "credentialmate-production-vpc"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-vpc",
              "Project": "CredentialMate"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:vpc-endpoint/vpce-01176b74936a6898e",
            "dns_entry": [
              {
                "dns_name": "vpce-01176b74936a6898e-w7w2k7dp.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01176b74936a6898e-w7w2k7dp-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01176b74936a6898e-w7w2k7dp-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04901293JVPXI8IRQUNQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01176b74936a6898e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05e0245a181f6a094",
              "eni-0ad1cc999dd6c2983"
            ],
            "owner_id": "051826703172",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0764bea1e735643ed"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.138",
                "subnet_id": "subnet-0cb2c348da91d59dd"
              },
              {
                "ipv4": "10.0.11.141",
                "subnet_id": "subnet-071034a9d6ecbba3c"
              }
            ],
            "subnet_ids": [
              "subnet-071034a9d6ecbba3c",
              "subnet-0cb2c348da91d59dd"
            ],
            "tags": {
              "Name": "credentialmate-production-ec2messages-endpoint"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-ec2messages-endpoint",
              "Project": "CredentialMate"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:vpc-endpoint/vpce-03509f9a1b64fdd56",
            "dns_entry": [
              {
                "dns_name": "vpce-03509f9a1b64fdd56-c02jdz9e.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03509f9a1b64fdd56-c02jdz9e-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03509f9a1b64fdd56-c02jdz9e-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05643323UYPSKH5AORPF"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z05652253C3RZ9J6TQP02"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03509f9a1b64fdd56",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035f0ef76b4980735",
              "eni-0a50079a6e59ce223"
            ],
            "owner_id": "051826703172",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0764bea1e735643ed"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.178",
                "subnet_id": "subnet-0cb2c348da91d59dd"
              },
              {
                "ipv4": "10.0.11.219",
                "subnet_id": "subnet-071034a9d6ecbba3c"
              }
            ],
            "subnet_ids": [
              "subnet-071034a9d6ecbba3c",
              "subnet-0cb2c348da91d59dd"
            ],
            "tags": {
              "Name": "credentialmate-production-ssm-endpoint"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-ssm-endpoint",
              "Project": "CredentialMate"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826703172:vpc-endpoint/vpce-0f929301d0810cb3a",
            "dns_entry": [
              {
                "dns_name": "vpce-0f929301d0810cb3a-ppoy41ex.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f929301d0810cb3a-ppoy41ex-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f929301d0810cb3a-ppoy41ex-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1038529171PNEWC000I"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z1037572AYV5I7RU8U9U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f929301d0810cb3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09058a474f74073af",
              "eni-0ab7be67a9006e574"
            ],
            "owner_id": "051826703172",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0764bea1e735643ed"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.174",
                "subnet_id": "subnet-0cb2c348da91d59dd"
              },
              {
                "ipv4": "10.0.11.24",
                "subnet_id": "subnet-071034a9d6ecbba3c"
              }
            ],
            "subnet_ids": [
              "subnet-071034a9d6ecbba3c",
              "subnet-0cb2c348da91d59dd"
            ],
            "tags": {
              "Name": "credentialmate-production-ssmmessages-endpoint"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "production",
              "HIPAA": "true",
              "ManagedBy": "Terraform",
              "Name": "credentialmate-production-ssmmessages-endpoint",
              "Project": "CredentialMate"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009c7a92b2822fd82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}